# rustdbgrid

./: .gitignore  ANALISA_TOOLBAR_DATAGRIDFOOTER.md  AUTO_SAVE_GUIDE.md  README.md  STORAGE_SYSTEM.md  convert-icon.js  create-icon.js  index.html  package-lock.json  package.json  vite.config.js
scripts/: build-sidecar.cjs
src-bridge/: ignite.cjs  sea-config.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  connection.rs  connection_info.rs  export.rs  logging.rs  mod.rs  query.rs  schema.rs  settings.rs  table.rs
src-tauri/src/db/: ignite.rs  ignite_node.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  postgres.rs  query_builder.rs  redis.rs  traits.rs
src-tauri/src/db/ignite/: driver.rs  mod.rs  query_builder.rs
src-tauri/src/db/mongodb/: driver.rs  mod.rs  query_builder.rs
src-tauri/src/db/mssql/: driver.rs  metadata_ops.rs  mod.rs  query_builder.rs  type_converter.rs
src-tauri/src/db/mysql/: driver.rs  metadata_ops.rs  mod.rs  query_builder.rs  type_converter.rs
src-tauri/src/db/postgres/: driver.rs  metadata_ops.rs  mod.rs  query_builder.rs  type_converter.rs
src-tauri/src/db/redis/: driver.rs  mod.rs  query_builder.rs
src-tauri/src/models/: connection.rs  distinct_values_request.rs  mod.rs  query_result.rs  save_request.rs  saved_query.rs  schema.rs  table_request.rs
src-tauri/src/utils/: clipboard.rs  connection_pool.rs  encryption.rs  mod.rs  settings.rs  storage.rs  tracing_logger.rs
(+233 files in other folders)
