[package]
name = "rustdbgrid"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustdbgrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

# Database drivers
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
] }
mongodb = "3.1"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tiberius = { version = "0.12", features = [
    "chrono",
    "rust_decimal",
    "bigdecimal",
] }
ignite-rs = "0.1"
bb8 = "0.8"
bb8-tiberius = "0.15"
tokio-util = { version = "0.7", features = ["compat"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
urlencoding = "2.1"
bigdecimal = "0.3"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5.0"
hostname = "0.4"
